--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.119.0",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
+    "leva": "^0.9.35",
     "next": "^14.0.2",
     "postprocessing": "^6.36.4",
     "r3f-perf": "^7.2.3",
@@ -19,6 +20,7 @@
     "react-dom": "18.2.0",
     "shader": "^1.0.0",
     "three": "^0.170.0",
+    "three-gpu-pathtracer": "^0.0.23",
     "three-mesh-bvh": "^0.8.3",
     "three-stdlib": "^2.34.0",
     "zustand": "^5.0.1"
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@types/node": "22.10.1",
     "postcss": "^8",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.2"
   }
