--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
     "dat.gui": "^0.7.9",
+    "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "n8ao": "^1.9.3",
     "next": "^14.0.2",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shader": "^1.0.0",
+    "split-type": "^0.3.4",
     "three": "^0.170.0",
     "three-gpu-pathtracer": "^0.0.23",
     "three-mesh-bvh": "^0.8.3",
